Next-16: fix layout issues

--- a/src/features/auth/signIn/ui/signIn.module.css
+++ b/src/features/auth/signIn/ui/signIn.module.css
@@ -1,4 +1,4 @@
-.card {
+.form {
   display: flex;
   flex-direction: column;
   max-width: 378px;
